logs/tailcolor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/fabulous'...
Listing './lib/python3.5/site-packages/fabulous/experimental'...
Listing './lib/python3.5/site-packages/fabulous/fonts'...
Listing './lib/python3.5/site-packages/fabulous-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/sarge'...
Listing './lib/python3.5/site-packages/sarge-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tailcolor'...
Compiling './lib/python3.5/site-packages/tailcolor/tailcolor.py'...
***   File "./lib/python3.5/site-packages/tailcolor/tailcolor.py", line 26
    print topline.text,
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tailcolor-0.2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
